# ctdproc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  HOW_TO_RELEASE.md  MANIFEST.in  Makefile  README.md  README.rst  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  requirements.yml  requirements_dev.txt  setup.cfg  setup.py
ctdproc/: __init__.py  calcs.py  helpers.py  io.py  proc.py
ctdproc/tests/: conftest.py  test_basic.py  test_helpers.py  test_really_cool_feature.py
ctdproc/tests/data/: AR73_DT001.XMLCON  BLT_TEST_001.XMLCON  lajit2-sr1614-001.XMLCON
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  notes.rst  requirements.txt  usage.rst
docs/_build/doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  notes.doctree  readme.doctree  usage.doctree
docs/_build/doctrees/source/: ctdproc.doctree  ctdproc.tests.doctree  modules.doctree
docs/_build/html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  notes.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/ctdproc/: calcs.html  (+3 more)
docs/_build/html/source/: ctdproc.html  ctdproc.tests.html  modules.html
docs/source/: ctdproc.rst  ctdproc.tests.rst
notebooks/: ctdproc_example.ipynb  ctdproc_test_fleat.ipynb  ctdproc_test_fleat_cast5.ipynb  pyctdproc_example.ipynb  test-speed-up-hex.ipynb
pyctdproc/: __init__.py  io.py  proc.py
pyctdproc/tests/: test_basic.py  test_helpers.py
src/ctdproc/: __init__.py  helpers.py  io.py  proc.py
tests/: test_basic.py  test_helpers.py
tests/data/: BLT_TEST_001.XMLCON  ar73_dt001.hex  lajit2-sr1614-001.XMLCON
(+5 files in other folders)
